[metadata]
name = yaml_env_var_parser
version = attr: yaml_env_var_parser.__version__
url = https://github.com/NiltonDuarte/yaml_env_var_parser
author = Nilton Duarte
author_email = github@niltonduarte.com
description = Implementation of PyYAML Reader with environment variables parsing.
long_description  = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords =
    YAML
    environ
    environment variables
    parsing
license = MIT
platforms = any
classifiers = 
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires = 
    PyYAML
packages = find:

[options.packages.find]
exclude =
    tests*